<resources>
    <string name="app_name">NostraAssessment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="calculate_text">Hitung Penjumlahan</string>
    <string name="list_number_text">Deret Angka</string>
    <string name="contact_text">Kelola Kontak</string>
    <string name="result_text">Hasil kalkulasi 2^%s adalah %s</string>
    <string name="calculate_result_text">Penjumlahan %s memiliki hasil: %s</string>
    <string name="number_hint">Isi Pangkat</string>
    <string name="yeay_text">yeay!</string>
    <string name="list_number_hint">Masukkan 2 inputan angka</string>
    <string name="bil_1_hint">Bilangan pertama</string>
    <string name="bil_2_hint">Bilangan kedua</string>
    <string name="btn_generate_text">generate</string>
    <string name="list_title_text">List angka yang sesuai</string>
    <string name="name_example">Example</string>
    <string name="phone_number_example">08123456789</string>
    <string name="email_text">Email: %s</string>
    <string name="address_text">Address: \n%s</string>
    <string name="version_text">version: %s</string>
    <string name="name_hint">Name</string>
    <string name="address_hint">Address</string>
    <string name="phone_hint">Phone</string>
    <string name="email_hint">Email</string>
    <string name="version_hint">Version</string>
    <string name="button_update_text">Update</string>
    <string name="button_delete_text">Delete</string>
    <string name="button_add_text">Add</string>
    <string name="invalid_name_text">Nama tidak boleh kosong</string>
    <string name="invalid_address_text">Alamat tidak boleh kosong</string>
    <string name="invalid_email_text">Isi email kamu dengan benar</string>
    <string name="invalid_phone_text">Isi nomor telepon kamu dengan benar</string>
    <string name="invalid_version_text">Versi tidak boleh kosong</string>
    <string name="update_contact_title">Update Contact</string>
    <string name="dialog_yes">Ya</string>
    <string name="update_contact_message">Apakah anda yakin ingin mengupdate contact %s ?</string>
    <string name="dialog_no">Tidak</string>
    <string name="delete_contact_title">Delete Contact</string>
    <string name="delete_contact_message">Apakah anda yakin ingin menghapus contact %s ?</string>
</resources>
