<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <requestFocus />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/list_number_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/field_number_1"
        android:layout_width="@dimen/dimen_170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/field_number_2"
        app:layout_constraintTop_toBottomOf="@id/tv_info">

        <EditText
            android:id="@+id/et_number_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bil_1_hint"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/field_number_2"
        android:layout_width="@dimen/dimen_170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:layout_constraintLeft_toRightOf="@id/field_number_1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_info">

        <EditText
            android:id="@+id/et_number_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bil_2_hint"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_generate"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@color/colorPrimaryLight"
        android:text="@string/btn_generate_text"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="@id/field_number_1"
        app:layout_constraintRight_toRightOf="@id/field_number_2"
        app:layout_constraintTop_toBottomOf="@id/field_number_1" />

    <TextView
        android:id="@+id/tv_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:text="@string/list_title_text"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@id/btn_generate"
        app:layout_constraintTop_toBottomOf="@id/btn_generate"
        tools:visibility="visible" />

    <ListView
        android:id="@+id/lv_number"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/btn_generate"
        app:layout_constraintRight_toRightOf="@id/btn_generate"
        app:layout_constraintTop_toBottomOf="@id/tv_list_title" />

</android.support.constraint.ConstraintLayout>